<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@color/cardBackgroundColor"
        app:cardCornerRadius="6dp"
        app:contentPadding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/record"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="48dp">

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/press_mic_button_to_speak"
                android:scrollbars="vertical"
                android:textColor="@color/cardTextColor"
                android:textColorHint="#99FFFFFF"
                android:textSize="30sp" />
        </ScrollView>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/speak"
        app:backgroundTint="@color/fabTintColor"
        app:fabCustomSize="72dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:maxImageSize="36dp"
        app:srcCompat="@drawable/ic_baseline_mic_none_24" />

    <ImageView
        android:id="@+id/pulse2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/input_pulse"
        android:src="@drawable/fab_outer_pulse"
        app:layout_constraintBottom_toBottomOf="@+id/record"
        app:layout_constraintEnd_toEndOf="@+id/record"
        app:layout_constraintStart_toStartOf="@+id/record"
        app:layout_constraintTop_toTopOf="@+id/record" />

    <ImageView
        android:id="@+id/pulse1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/input_pulse"
        android:src="@drawable/fab_inner_pulse"
        app:layout_constraintBottom_toBottomOf="@+id/record"
        app:layout_constraintEnd_toEndOf="@+id/record"
        app:layout_constraintStart_toStartOf="@+id/record"
        app:layout_constraintTop_toTopOf="@+id/record" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:contentDescription="@string/close"
        android:src="@drawable/ic_baseline_close_24"
        app:backgroundTint="#261441"
        app:fabSize="mini"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView" />


</androidx.constraintlayout.widget.ConstraintLayout>